--- a/app/src/main/res/layout/activity_rsa.xml
+++ b/app/src/main/res/layout/activity_rsa.xml
@@ -17,14 +17,14 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_code_style"
+                android:id="@+id/tv_file_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/code_style"
                 android:textSize="20sp" />
 
             <RadioGroup
-                android:id="@+id/rg_code_style"
+                android:id="@+id/rg_file_code"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -199,7 +199,7 @@
             android:layout_marginTop="10dp">
 
             <TextView
-                android:id="@+id/tv_input_content"
+                android:id="@+id/tv_id_a"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/input_content"
@@ -209,7 +209,7 @@
                 android:id="@+id/bt_choose_file"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_input_content"
+                android:layout_below="@id/tv_id_a"
                 android:layout_marginTop="10dp"
                 android:text="@string/choose_file" />
 
@@ -222,11 +222,11 @@
                 android:text="@string/input_show" />
 
             <EditText
-                android:id="@+id/et_input_content"
+                android:id="@+id/et_id_a"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:layout_marginEnd="10dp"
-                android:layout_toEndOf="@id/tv_input_content"
+                android:layout_toEndOf="@id/tv_id_a"
                 android:background="@drawable/et_background"
                 tools:ignore="Autofill,LabelFor,TextFields" />
 
