--- a/app/src/main/res/layout/activity_sm2_change.xml
+++ b/app/src/main/res/layout/activity_sm2_change.xml
@@ -5,4 +5,294 @@
     android:layout_height="match_parent"
     tools:context=".Sm2ChangeActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_file_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/code_style"
+                android:textSize="20sp" />
+
+            <RadioGroup
+                android:id="@+id/rg_file_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/rb_utf8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/utf_8" />
+
+                <RadioButton
+                    android:id="@+id/rb_gbk"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/gbk" />
+
+                <RadioButton
+                    android:id="@+id/rb_unicode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/unicode" />
+
+            </RadioGroup>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_id_input_format"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/id_input_format"
+                android:textSize="18sp" />
+
+            <RadioGroup
+                android:id="@+id/rg_id_input_format"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/rb_id_bin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/bin" />
+
+                <RadioButton
+                    android:id="@+id/rb_id_hex"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/hex" />
+
+                <RadioButton
+                    android:id="@+id/rb_id_str"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/str" />
+
+                <RadioButton
+                    android:id="@+id/rb_id_byte"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/_byte" />
+
+            </RadioGroup>
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:id="@+id/tv_id_a"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/a_id"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/et_id_a"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginEnd="10dp"
+                android:layout_toEndOf="@id/tv_id_a"
+                android:background="@drawable/et_background"
+                tools:ignore="Autofill,LabelFor,TextFields" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:id="@+id/tv_id_b"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/b_id"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/et_id_b"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginEnd="10dp"
+                android:layout_toEndOf="@id/tv_id_b"
+                android:background="@drawable/et_background"
+                tools:ignore="Autofill,LabelFor,TextFields" />
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_key_format"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/key_input_format"
+                android:textSize="18sp" />
+
+            <RadioGroup
+                android:id="@+id/rg_key_format"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/rb_key_bin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/bin" />
+
+                <RadioButton
+                    android:id="@+id/rb_key_hex"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/hex" />
+
+                <RadioButton
+                    android:id="@+id/rb_key_str"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/str" />
+
+                <RadioButton
+                    android:id="@+id/rb_key_byte"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/_byte" />
+
+            </RadioGroup>
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:id="@+id/tv_key_a"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/a_key"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/et_key_a"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_marginEnd="10dp"
+                android:layout_toEndOf="@id/tv_key_a"
+                android:background="@drawable/et_background"
+                tools:ignore="Autofill,LabelFor,TextFields" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:id="@+id/tv_key_b"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/b_key"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/et_key_b"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_marginEnd="10dp"
+                android:layout_toEndOf="@id/tv_key_b"
+                android:background="@drawable/et_background"
+                tools:ignore="Autofill,LabelFor,TextFields" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/bt_handler"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="50dp"
+                android:text="@string/handler"
+                tools:ignore="ButtonStyle" />
+
+            <Button
+                android:id="@+id/bt_change_system_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="50dp"
+                android:text="@string/system_code_change"
+                tools:ignore="ButtonStyle,RelativeOverlap" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:id="@+id/tv_result"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/handler_result"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/et_result"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_toEndOf="@id/tv_result"
+                android:background="@drawable/et_background"
+                tools:ignore="Autofill,LabelFor,TextFields" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
 </ScrollView>
